# bluepass-server

./: .appveyor.yml  .gitmodules  BluePassServer.pro  CMakeLists.txt  README.md  app_constants.h  bluetooth_device_list_model.cpp  bluetooth_device_list_model.h  bluetooth_service.cpp  bluetooth_service.h  bpserver.qrc  choose_adapter_dialog.cpp  choose_adapter_dialog.h  choose_adapter_dialog.ui  dashboard.cpp  dashboard.h  dashboard.ui  main.cpp  main_app.cpp  main_app.h  settings.cpp  settings.h  settings_type.cpp  settings_type.h
.github/workflows/: codeql.yml
appdir-template/usr/share/applications/: BluePassServer.desktop
ci/: install-linuxdeployqt.sh  install-qt-dependencies.sh  package-appimage-linux.sh
